changed title heading on home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
   
 <body>
   <header>
-    <h1 class="com-title"> Home Screen </h1>
+    <h1 class="com-title"> CineInfo </h1>
     <nav class="mod">
       <a class="com-nav" href="/home"> Home </a>
       <a class="com-nav" href="/addMovie"> Add a movie </a>
